@@ -1,3 +1,6 @@
+2012-09-10 Molnar Karoly <proton7@freemail.hu>
+	* tools/config-help.pl: Minor code cleaning.
+
 2012-09-09 Borut Razem <borut.razem AT siol.net>
 	* scripts/build/mingw/do_setup.sh: 
 	  detect gputils version from configure.ac, cygwin gcc-4
